--- a/src/app/home/home.component.tns.html
+++ b/src/app/home/home.component.tns.html
@@ -4,9 +4,11 @@
     <ActionItem *ngIf="pending" text="Push to server" position="right">
         <Label text="&#xf0c7;" class="far p-r-10"></Label>
     </ActionItem>
+    <ActionItem [text]="'About'|L"
+                [nsRouterLink]="['/home/about']"
+                ios.position="right"
+                android.position="popup"></ActionItem>
 </ActionBar>
 <StackLayout>
-    <router-outlet>
-<!--        <Label text="home"></Label>-->
-    </router-outlet>
+    <router-outlet></router-outlet>
 </StackLayout>
