--- a/src/app/scan/found-dialog/found-dialog.component.tns.html
+++ b/src/app/scan/found-dialog/found-dialog.component.tns.html
@@ -1,5 +1,5 @@
 <StackLayout margin="24" horizontalAlignment="center" verticalAlignment="center">
-    <Label [text]="msg" class="number p-b-12" horizontalAlignment="center" [class.warning]="error" textWrap="true"></Label>
+    <Label [text]="msg" class="number p-b-12" horizontalAlignment="center" [class.-warning]="error" textWrap="true"></Label>
     <Label [text]="'Номер: ' + athlet.number" class="number p-b-12" horizontalAlignment="center"></Label>
     <Label [text]="'Имя: ' + athlet.fio"></Label>
     <Label [text]="'Класс: ' + athlet.class"></Label>
