--- a/src/app/web/results/results.component.html
+++ b/src/app/web/results/results.component.html
@@ -51,6 +51,9 @@
             <small>
                 г. {{element.athlet.city}}
             </small>
+            <small [hidden]="hide_start_time">
+                <br>тел. {{element.athlet.phone}}
+            </small>
         </td>
     </ng-container>
 
