--- a/src/app/web/results/results.component.html
+++ b/src/app/web/results/results.component.html
@@ -1,9 +1,10 @@
 <mat-card class="m-20">
     <mat-card-content [hidden]="hide_start_time">
-        <button (click)="onStart($event)" mat-raised-button color="primary" class="m-20">Начать соревнования</button>
+        <button (click)="onSetStartTime($event)" mat-raised-button color="primary" class="m-20">Начать соревнования</button>
         <ngx-timepicker-field #picker
                               [format]="24"
-                              [defaultTime]="start_time.format('HH:mm')" class="m-20 in-row"></ngx-timepicker-field>
+                              [defaultTime]="start_time.format('HH:mm')"
+                              class="m-20 in-row"></ngx-timepicker-field>
     </mat-card-content>
     <mat-card-content>
         <mat-form-field class="p-20">
@@ -19,6 +20,9 @@
                 <mat-radio-button class="m-r-10" value="hobby">Hobby</mat-radio-button>
             </mat-radio-group>
         </div>
+        <angular2csv [data]="getCsvData(dataSource.filteredData)"
+                     [filename]="classes.join('_') + '_' + (this.now|date:'dd-MM-yy_HH:mm:ss')"
+                     [options]="csv_export_options"></angular2csv>
     </mat-card-content>
 </mat-card>
 
@@ -67,7 +71,9 @@
             </small>
         </th>
         <td mat-cell *matCellDef="let element" [ngSwitch]="!hide_place ? element.marks[y] : null">
-      <span *ngSwitchDefault [class.active]="element.last_created == element.marks[y].created">
+      <span *ngSwitchDefault
+            [class.active]="element.last_created == element.marks[y].created"
+            [class.elapsed]="getElapsed(element.marks[y].created)">
 <!--        <mat-icon aria-hidden="false" aria-label="Clock">av_timer</mat-icon>-->
           <!--          {{ diffTime(element.marks[y].created) }}<br>-->
       <small>
