--- a/src/app/home/stat/stat.component.tns.html
+++ b/src/app/home/stat/stat.component.tns.html
@@ -2,7 +2,7 @@
     <Label [text]="'Всего зарегестрированно участников: ' + athlets_count"></Label>
     <Label [text]="'Класс open: ' + open_count"></Label>
     <Label [text]="'Класс hobby: ' + hobby_count"></Label>
-    <Button class="brn -primary scan" [text]="'Сканировать'|L" [nsRouterLink]="['/scan']"></Button>
+    <Button class="btn -primary scan" [text]="'Сканировать'|L" [nsRouterLink]="['/scan']"></Button>
 </StackLayout>
 <StackLayout>
     <Image src="~/images/surskie_zori.jpg"></Image>
