--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,19 +4,24 @@
         <!--        <span class="example-spacer"></span>-->
         <!--        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>-->
         <!--        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon>-->
-        <button mat-flat-button color="warn"
+        <a mat-flat-button color="warn"
                 [disabled]="_activatedUrl == '/list'"
                 [routerLink]="['list']"
                 routerLinkActive="active">Список участников
-        </button>
+        </a>
         <mat-menu #appMenu="matMenu">
             <!--            <button mat-menu-item [routerLink]="['results']">Результаты</button>-->
             <!--            <button mat-menu-item [routerLink]="['list']">Список участников</button>-->
             <!--            <button mat-menu-item [routerLink]="['settings']">Настройки</button>-->
-            <button mat-menu-item [routerLink]="['results/public']" routerLinkActive="active">Результаты</button>
-            <button mat-menu-item [routerLink]="['access/register']" routerLinkActive="active">Регистрация участников
-            </button>
-            <button mat-menu-item [routerLink]="['help']" routerLinkActive="active">Помощ</button>
+            <a mat-menu-item [routerLink]="['results/public']" routerLinkActive="active">
+                Результаты
+            </a>
+            <a mat-menu-item [routerLink]="['access/register']" routerLinkActive="active">
+                Регистрация участников
+            </a>
+            <a mat-menu-item [routerLink]="['help']" routerLinkActive="active">
+                Помощ
+            </a>
         </mat-menu>
 
         <button mat-icon-button [matMenuTriggerFor]="appMenu">
