--- a/src/app/web/results/results-admin/result-detail/result-detail.component.html
+++ b/src/app/web/results/results-admin/result-detail/result-detail.component.html
@@ -19,6 +19,13 @@
     </li>
 </ul>
 
+<button mat-stroked-button
+        color="primary"
+        (click)="onAddTime()">
+    Добавить время
+</button>
+<br>
+
 <!--{{ athlet.checkpoints|json }}-->
 
 <!--{{checkpoints|json}}-->
@@ -32,8 +39,16 @@
 
     <ng-container matColumnDef="nfc">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> NFC отметка времени.</th>
-        <td mat-cell *matCellDef="let element">
+        <td mat-cell *matCellDef="let element"
+            [class.active]="element.mark?.manual && !element.mark?.missing">
             {{ element.mark?.created?.toDate()|date:"HH:mm:ss" }}
+        </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nfc_cp_offset">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> время до предыдущей отметки.</th>
+        <td mat-cell *matCellDef="let element; let i = index">
+            {{ diffTime(dataSource.data[i-1]?.mark?.created, element.mark?.created) }}
         </td>
     </ng-container>
 
@@ -44,17 +59,28 @@
         </td>
     </ng-container>
     <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Local отметка времени.</th>
+        <th mat-header-cell *matHeaderCellDef>
+            <button mat-stroked-button color="warn" (click)="onSave()">
+                Сохранить
+            </button>
+        </th>
         <td mat-cell *matCellDef="let element; let i = index">
             <button mat-stroked-button
                     color="primary"
                     (click)="onSetTime(i)"
-                    [disabled]="!element.mark?.missing">
+                    [disabled]="!element.mark?.missing && !element.mark?.manual">
                 Установить время
+            </button>
+            <button mat-stroked-button
+                    color="primary"
+                    (click)="onDeleteTime(i)"
+                    [disabled]="!element.mark?.created">
+                Удалить
             </button>
         </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns; "></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index;"
+        [class.last-cp]="isLastCp(i)"></tr>
 </table>
