--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,9 @@
             <a mat-menu-item [routerLink]="['help']" routerLinkActive="active">
                 Помощ
             </a>
+            <a mat-menu-item [routerLink]="['access/signin']" routerLinkActive="active">
+                Войти
+            </a>
         </mat-menu>
 
         <button mat-icon-button [matMenuTriggerFor]="appMenu">
