--- a/src/app/web/results/results-admin/result-detail/result-detail.component.html
+++ b/src/app/web/results/results-admin/result-detail/result-detail.component.html
@@ -55,7 +55,7 @@
     <ng-container matColumnDef="local">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Local отметка времени.</th>
         <td mat-cell *matCellDef="let element">
-            {{ element.local?.created?.toDate()|date:"HH:mm:ss" }}
+            {{ element.local?.created?.toDate()|date:"HH:mm:ss":"+0300" }}
         </td>
     </ng-container>
     <ng-container matColumnDef="actions">
