--- a/src/app/web/routes/dashboard/dashboard.component.html
+++ b/src/app/web/routes/dashboard/dashboard.component.html
@@ -1,1 +1,42 @@
 <page-header></page-header>
+<div>
+    <div fxLayoutGap="20px"
+         fxLayout="row wrap"
+         fxLayout.lt-sm="column">
+        <mat-card *ngFor="let competition of competitions$|async"
+                  fxFlex="0 0 calc(25% - 20px)"
+                  fxFlex.lt-lg="0 0 calc(33% - 20px)"
+                  fxFlex.lt-md="0 0 calc(50% - 20px)"
+                  fxFlex.lt-sm="100%"
+                  fxFlexAlign="start start">
+            <mat-card-content>
+                <mat-list>
+                    <h3 mat-subheader>
+                        <a [routerLink]="[competition.id]">{{ competition.title }}</a>
+                    </h3>
+                    <mat-list-item>
+                        <mat-icon mat-list-icon>class</mat-icon>
+                        <h4 mat-line>Классы</h4>
+                        <p mat-line> {{ competition.classes.join(', ') }} </p>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-icon mat-list-icon>date_range</mat-icon>
+                        <h4 mat-line>Начало</h4>
+                        <p mat-line> {{ competition.start_date.toDate()|date }} </p>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-icon mat-list-icon>nfc</mat-icon>
+                        <h4 mat-line>Способы отметок</h4>
+                        <p mat-line> {{ competition.checking.join(', ') }} </p>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-icon mat-list-icon>location_on</mat-icon>
+                        <h4 mat-line>Кол-во отметок</h4>
+                        <p mat-line> {{ competition.checkpoints.length }} </p>
+                    </mat-list-item>
+                </mat-list>
+            </mat-card-content>
+        </mat-card>
+    </div>
+</div>
+
