--- a/src/app/web/routes/dashboard/dashboard.component.html
+++ b/src/app/web/routes/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
          fxLayout="row wrap"
          fxLayout.lt-sm="column">
         <mat-card *ngFor="let competition of competitions$|async"
-                  fxFlex="0 0 calc(25% - 20px)"
+                  fxFlex="0 0 calc(33% - 20px)"
                   fxFlex.lt-lg="0 0 calc(33% - 20px)"
                   fxFlex.lt-md="0 0 calc(50% - 20px)"
                   fxFlex.lt-sm="100%"
@@ -12,7 +12,7 @@
             <mat-card-content>
                 <mat-list>
                     <h3 mat-subheader>
-                        <a [routerLink]="[competition.id]">{{ competition.title }}</a>
+                        <a [routerLink]="['/edit/'+competition.id]">{{ competition.title }}</a>
                     </h3>
                     <mat-list-item>
                         <mat-icon mat-list-icon>class</mat-icon>
@@ -23,6 +23,9 @@
                         <mat-icon mat-list-icon>date_range</mat-icon>
                         <h4 mat-line>Начало</h4>
                         <p mat-line> {{ getFullDate(competition.start_date, competition.start_time)|date:"yyyy-dd-MM HH:mm:ss z" }} </p>
+                        <p *ngIf="current_timezone != competition.timezone" mat-line matTooltip="Начало в выбранном часовом поясе">
+                            {{ getFullDate(competition.start_date, competition.start_time)|date:"yyyy-dd-MM HH:mm:ss z":getTzOffset(competition.timezone) }}
+                        </p>
                     </mat-list-item>
                     <mat-list-item>
                         <mat-icon mat-list-icon>nfc</mat-icon>
@@ -33,6 +36,11 @@
                         <mat-icon mat-list-icon>location_on</mat-icon>
                         <h4 mat-line>Кол-во отметок</h4>
                         <p mat-line> {{ competition.checkpoints.length }} </p>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-icon mat-list-icon>location_on</mat-icon>
+                        <h4 mat-line>Этапы</h4>
+                        <p mat-line> {{ competition.stages.length }} </p>
                     </mat-list-item>
                 </mat-list>
             </mat-card-content>
