--- a/src/app/web/results/results-admin/result-detail/result-set-time/result-set-time.component.html
+++ b/src/app/web/results/results-admin/result-detail/result-set-time/result-set-time.component.html
@@ -1,5 +1,5 @@
-<h1 mat-dialog-title>Missing time setup</h1>
-<form [formGroup]="setTimeForm" #formDirective="ngForm"
+<h1 mat-dialog-title>Установка пропущенной отметки</h1>
+<form [formGroup]="setTimeForm"
       (ngSubmit)="onEnter(setTimeForm.valid)">
     <div mat-dialog-content>
         <p>Please, enter time</p>
@@ -8,6 +8,7 @@
         </mat-form-field>
     </div>
     <div mat-dialog-actions>
-        <button mat-button type="submit">Установить</button>
+        <button mat-button type="submit">Ок</button>
+        <button mat-button mat-dialog-close>Закрыть</button>
     </div>
 </form>
