--- a/src/app/web/routes/dashboard/dashboard.component.html
+++ b/src/app/web/routes/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<page-header></page-header>
+<page-header [showBreadCrumb]="false" title="Главная"></page-header>
 <div>
     <div fxLayoutGap="20px"
          fxLayout="row wrap"
