--- a/src/app/web/results/results.component.html
+++ b/src/app/web/results/results.component.html
@@ -1,32 +1,27 @@
-<mat-card class="m-20">
-    <mat-card-content>
-        <mat-form-field class="p-20">
-            <input matInput (keyup)="applyFilter($event, 'str')" placeholder="Фильтр">
-            <mat-hint>По фамилии или номеру участника</mat-hint>
-        </mat-form-field>
-        <!--        <div [hidden]="hide_class_filter" class="p-20 mat-form-field">-->
-        <!--            <label id="radio-group-classes">Классы участников</label>-->
-        <!--            <mat-radio-group [ngModel]="filter.class" (ngModelChange)="applyFilter($event, 'class')"-->
-        <!--                             aria-labelledby="radio-group-classes" aria-label="Классы участников">-->
-        <!--                <mat-radio-button class="m-r-10" value="">Все</mat-radio-button>-->
-        <!--                <mat-radio-button class="m-r-10" value="open">Open</mat-radio-button>-->
-        <!--                <mat-radio-button class="m-r-10" value="hobby">Hobby</mat-radio-button>-->
-        <!--            </mat-radio-group>-->
-        <!--        </div>-->
-        <angular2csv [data]="getCsvData(dataSource.filteredData)"
-                     [filename]="classes.join('_') + '_' + (this.now|date:'dd-MM-yy_HH:mm:ss')"
-                     [options]="csv_export_options"></angular2csv>
-    </mat-card-content>
-    <h2>
-        Время старта: {{ start_time.toDate()|date:"yyyy-dd-MM HH:mm:ss z":"+0300" }}
-    </h2>
-</mat-card>
+<h2>
+    <csv [data]="getCsvData(dataSource.filteredData)"
+         [filename]="classes.join('_') + '_' + (this.now|date:'dd-MM-yy_HH:mm:ss')"
+         [options]="csv_export_options">
+        <a mat-icon-button color="warn">
+            <mat-icon [matTooltip]="'Скачать таблицу в формате CSV'">get_app</mat-icon>
+        </a>
+    </csv>
+    Время старта: {{ start_time.toDate()|date:"yyyy-dd-MM HH:mm:ss z":getTzOffset(competition.timezone) }}
+</h2>
 
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+<mat-form-field class="m-b-24">
+    <input matInput (keyup)="applyFilter($event, 'str')" placeholder="Фильтр">
+    <mat-hint>По фамилии или номеру участника</mat-hint>
+</mat-form-field>
+
+
+<div class="table-container">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
     <ng-container *ngIf="!hide_place" matColumnDef="place">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Place</th>
-        <td mat-cell *matCellDef="let element" [class.highlight]="element.place <= 3"> {{ element.place }} </td>
+        <td mat-cell *matCellDef="let element"
+            [class.highlight]="element.place <= 3"> {{ element.place }} </td>
     </ng-container>
 
     <ng-container matColumnDef="number">
@@ -44,7 +39,8 @@
         <td mat-cell *matCellDef="let element" class="athlet">
             <ul>
                 <li [ngSwitch]="is_admin">
-                    <a *ngSwitchCase="true" [routerLink]="['detail', element.athlet.phone]">{{element.athlet.fio}}</a>
+                    <a *ngSwitchCase="true"
+                       [routerLink]="['detail', element.athlet.phone]">{{element.athlet.fio}}</a>
                     <span *ngSwitchDefault>{{element.athlet.fio}}</span>
                 </li>
                 <li>
@@ -63,14 +59,14 @@
         </td>
     </ng-container>
 
-    <ng-container [matColumnDef]="def.key + '_' + y" *ngFor="let def of checkpoints; let y = index;">
+    <ng-container [matColumnDef]="'CP_' + y"
+                  *ngFor="let def of checkpoints; trackBy: trackByIndex; let y = index;">
         <th mat-header-cell *matHeaderCellDef class="v-top p-t-2 cp-header">
-        <span>
-            {{ def.key }}
-        </span><br>
-            <small>
-                {{ def.name }}
-            </small>
+            <div>
+                <small>
+                    {{ def.title || 'CP_' + ((y % this.checkpoints.length) + 1)  }}
+                </small>
+            </div>
         </th>
         <td mat-cell
             *matCellDef="let element"
@@ -78,12 +74,13 @@
             [class.last-cp]="isLastCp(y)">
             <div *ngSwitchDefault
                  [class.active]="element.last_created == element.marks[y].created"
-                 [class.elapsed]="element.marks[y].elapsed">
+                 [class.elapsed]="element.marks[y].elapsed" class="p-l-4 p-r-4">
                 <small>
                     {{ diffTime(element.marks[y].created) }}
                 </small>
                 <small>
-                    {{ element.marks[y].created.toDate()|date:"HH:mm:ss z":"+0300" }}<br>
+                    {{ element.marks[y].created.toDate()|date:"HH:mm:ss z":getTzOffset(competition.timezone) }}
+                    <br>
                 </small>
             </div>
             <span *ngSwitchCase="null">-</span>
@@ -93,3 +90,4 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+</div>
