--- a/src/app/web/results/results.component.scss
+++ b/src/app/web/results/results.component.scss
@@ -1,3 +1,8 @@
+.table-container {
+  max-height: calc(100vh - 165px);
+  overflow: auto;
+}
+
 table {
   width: 100%;
 }
@@ -38,6 +43,8 @@ table {
 
 .athlet {
   ul {
+    padding: 0;
+    margin: 4px 0;
     list-style-type: none;
     font-size: smaller;
   }
