--- a/src/app/web/theme/admin-layout/sidemenu/sidemenu.component.html
+++ b/src/app/web/theme/admin-layout/sidemenu/sidemenu.component.html
@@ -1,6 +1,6 @@
 <ul navAccordion class="matero-sidemenu level-0">
   <li navAccordionLink class="matero-sidemenu-item" routerLinkActive="active"
-      *ngFor="let menuItem of menus"
+      *ngFor="let menuItem of menus$|async"
       [group]="menuItem.state">
     <a class="matero-sidemenu-link" [routerLink]="['/', menuItem.state]"
        *ngIf="menuItem.type === 'link'"
@@ -55,7 +55,7 @@
     </a>
     <!-- level 1 -->
     <a navAccordionToggle class="matero-sidemenu-toggle" href="javascript:void(0);"
-       *ngIf="menuItem.type === 'sub'"
+       *ngIf="menuItem.type === 'sub' && menuItem.children.length"
        matRipple [matRippleDisabled]="!ripple">
       <mat-icon class="menu-icon">{{ menuItem.icon }}</mat-icon>
       <span class="menu-name">{{ menuItem.name }}</span>
@@ -63,8 +63,8 @@
         {{ menuItem.label.value }}
       </span>
       <span fxFlex></span>
-      <span class="menu-badge bg-{{ menuItem.badge.color }}" *ngIf="menuItem.badge">
-        {{ menuItem.badge.value }}
+      <span class="menu-badge bg-{{ menuItem.badge?.color }}" *ngIf="menuItem.badge?.value">
+        {{ menuItem.children.length || menuItem.badge.value }}
       </span>
       <mat-icon class="menu-caret">arrow_drop_down</mat-icon>
     </a>
@@ -72,8 +72,13 @@
       <li navAccordionLink class="matero-sidemenu-item" routerLinkActive="active"
           *ngFor="let childLvl1 of menuItem.children"
           [group]="childLvl1.state">
-        <a class="matero-sidemenu-link" [routerLink]="['/', menuItem.state, childLvl1.state]"
+        <a class="matero-sidemenu-link" [routerLink]="[menuItem.state, childLvl1.state]"
            *ngIf="childLvl1.type === 'link'"
+           matRipple [matRippleDisabled]="!ripple">
+          <span class="menu-name">{{ childLvl1.name }}</span>
+        </a>
+        <a class="matero-sidemenu-link" [routerLink]="childLvl1.state"
+           *ngIf="childLvl1.type === 'state'"
            matRipple [matRippleDisabled]="!ripple">
           <span class="menu-name">{{ childLvl1.name }}</span>
         </a>
