--- a/src/app/web/shared/components/competition/competition.component.html
+++ b/src/app/web/shared/components/competition/competition.component.html
@@ -1,6 +1,6 @@
-<pre>
-    {{data.athlet_extra_fields|json}}
-</pre>
+<!--<pre>-->
+<!--    {{data.athlet_extra_fields|json}}-->
+<!--</pre>-->
 <!--<pre>-->
 <!--    {{data.classes|json}}-->
 <!--</pre>-->
